--- a/02-objects/index.html
+++ b/02-objects/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>List of all application</title>
+    <!-- <script src="./src/01-object.js"></script> -->
+    <script src="./src/02-object-creation.js"></script>
+    <title>Document</title>
   </head>
-  <body>
-    <h1>CSE Team Practice Applications</h1>
-    <ul>
-      <li><a href="./01-counter/index.html" target="_blank">Counter</a></li>
-    </ul>
-  </body>
+  <body></body>
 </html>
