--- a/02-objects/index.html
+++ b/02-objects/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <script src="./src/01-object.js"></script> -->
-    <script src="./src/02-object-creation.js"></script>
-    <title>Document</title>
+    <!-- <script src="./src/02-object-creation.js"></script> -->
+    <!-- <script src="./src/02-understanding-this.js"></script> -->
+    <!-- <script src="./src/03-adding-properties.js"></script> -->
+    <script src="./src/04-adding-function.js"></script>
+    <title>Objects with JavaScript</title>
   </head>
-  <body></body>
+  <body>
+    <h1>JavaScript Objects</h1>
+    <ul>
+      <li>Literal Object creation</li>
+      <li>Create object using constructor function</li>
+      <li>Adding properties to an object</li>
+      <li>Attaching functions as properties</li>
+      <li>__prototype__ for common properties</li>
+    </ul>
+  </body>
 </html>
