--- a/03-more-functions/index.html
+++ b/03-more-functions/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaScript Functions</title>
+    <!-- <script src="./src/01-es6-fuctions.js"></script> -->
+    <script src="./src/02-demo-callback.js"></script>
   </head>
   <body>
     <h1>JavaScript Function Basics</h1>
