Add employees demo

--- a/06-faker-example/index.html
+++ b/06-faker-example/index.html
@@ -14,3 +14,9 @@
     <button id="addBtn">Add Employee</button>
   </body>
 </html>
+
+<!-- 
+  use external libraries 
+  Use JS to manipulate web page 
+  Understand the use of objects 
+ -->
