--- a/07-DOM-manipulation/index.html
+++ b/07-DOM-manipulation/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="./style/style.css" />
     <!-- faker cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Faker/3.1.0/faker.min.js"></script>
-    <script src="./src/app.js" defer></script>
+    <!-- <script src="./src/app.js" defer></script> -->
+    <script src="./src/app1.js" defer></script>
   </head>
 
   <body>
