Adding paragraphs for team members

--- a/08-render-cards/index.html
+++ b/08-render-cards/index.html
@@ -10,7 +10,17 @@
   </head>
   <body>
     <h1>Our team</h1>
-    <button>Load Team</button>
+    <button id="loadTeam">Load Team</button>
     <div id="team"></div>
   </body>
+  <style>
+    p {
+      /* width: 100px;
+      height: 100px; */
+      border: 2px solid black;
+      text-align: center;
+      border-radius: 10px;
+      padding: 10px;
+    }
+  </style>
 </html>
